[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
